# leoma

./: .gitignore  Dockerfile  Dockerfile.eval  README.md  docker-compose.api.yml  docker-compose.yml  ecosystem.config.js  ecosystem.eval.8xh100.config.js  ecosystem.eval.config.js  env.eval.example  env.example  env.owner-api.example  env.validator.example  leoma.py  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
docs/: PRODUCTION_8XH100_RUNBOOK.md  TESTNET_RUNBOOK.md
leoma/: chain.toml  eval_server.py
leoma/app/: preflight.py  smoke.py
leoma/app/evaluator/: __init__.py  main.py
leoma/app/miner/: __init__.py  main.py
leoma/app/owner_sampler/: main.py
leoma/app/sampler/: __init__.py  core.py  loop.py
leoma/app/validator/: __init__.py  aggregate_local.py  copy_check.py  dashboard.py  failures.py  king.py  last_winner.py  main.py  miner_validation.py  prescreen.py  rate_limit.py  reveal_scan.py  rotation_local.py  seeds.py  state_store.py  window_local.py
leoma/bootstrap/: __init__.py  runtime.py
leoma/delivery/: commands.py
leoma/delivery/http/: contracts.py  dashboard_service.py  server.py  verifier.py
leoma/delivery/http/routes/: __init__.py  _task_utils.py  blacklist.py  health.py  miners.py  overview.py  rotation.py  samples.py  scores.py  tasks.py  validators.py  weights.py
leoma/delivery/http/tasks/: __init__.py  miner_consensus.py  score_calculation.py  validator_sync.py
leoma/domain/: comparison.py  participant.py  source.py  submission.py
leoma/eval/: __init__.py  _clip.py  _flow.py  _lpips.py  arch_lock.py  baselines.py  bootstrap.py  calibrate.py  codehash.py  dataset.py  determinism.py  devices.py  digests.py  errors.py  guards.py  manifest.py  metrics.py  spec.py  video_runner.py
leoma/infra/: __init__.py  aggregate.py  allowlist.py  chain_config.py  chute_resolver.py  chute_status.py  commit_parser.py  corpus.py  corpus_manifest.py  judge.py  ledger_backfill.py  model_store.py  onchain_allowlist.py  peer_registry.py  rank.py  remote_api.py  rotation_math.py  s3_transfer.py  scorer_constants.py  stake_voting.py  storage_backend.py  video_utils.py
leoma/infra/db/: __init__.py  tables.py
leoma/infra/db/stores/: __init__.py  store_miner_report.py  store_miner_task_rank.py  store_produced_task.py  store_sample.py  store_sampling_state.py  store_validator.py
tests/: conftest.py
tests/integration/: conftest.py  test_database.py  test_sampler_flow.py
tests/unit/: conftest.py  test_aggregate.py  test_antiabuse.py  test_api_samples.py  test_arch_lock.py  test_auth_signature.py  test_calibrate.py  test_chain_config.py  test_cli_smoke.py  test_commit_parser.py  test_concurrent_generation.py  test_consensus_spec.py  test_copy_check.py  test_corpus_cli.py  test_corpus_manifest.py  test_cuda_selfkill.py  test_dashboard.py  test_dashboard_service.py  test_decode_and_digests.py  test_devices.py  test_duel_bootstrap.py  test_duel_seeds.py  test_e2e_consensus_sim.py  test_eval_server.py  test_eval_server_resilience.py  test_evaluation.py  test_freeze_gate.py  test_guards_and_audit.py  test_inflight_guillotine.py  test_king_chain.py  test_king_state_store.py  test_ledger_backfill.py  test_local_faults.py  test_metrics_flow_clip.py  test_miner_consensus.py  test_miner_task_entries.py  test_model_cache.py  test_model_store.py  test_multi_eval_server.py  test_onchain_allowlist.py  (+24 more)
