[project]
name = "leoma"
version = "0.3.9"
description = "Image-Text-to-Video generation subnet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0,<4",
    "async-substrate-interface==1.6.4",
    "bittensor==9.12.2",
    "python-dotenv>=1.0.0",
    "huggingface-hub",
    "minio",
    "openai>=1.0.0,<2",
    "google-genai>=0.3.0",
    "click",
    "pydantic>=2.0.0,<3",
    "yt-dlp",
    # Database
    "asyncpg>=0.29.0,<0.30",
    "sqlalchemy[asyncio]>=2.0.0,<3",
    # API (pin minor for reproducible builds; run pip audit before production)
    "fastapi>=0.109.0,<0.116.0",
    "uvicorn[standard]>=0.27.0",
    # Miner cli
    "chutes>=0.4.8",
    "pillow",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
leoma = "leoma.delivery.commands:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["leoma*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"

[tool.leoma.system-dependencies]
# ffprobe is required by video utilities and is provided by ffmpeg.
required_binaries = ["ffprobe", "ffmpeg"]
install_debian = "apt-get update && apt-get install -y ffmpeg"
