[project]
name = "leoma"
version = "0.3.9"
description = "Image-Text-to-Video generation subnet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0,<4",
    "async-substrate-interface==1.6.4",
    "bittensor==9.12.2",
    "python-dotenv>=1.0.0",
    "huggingface-hub",
    "hippius-hub==0.6.1",
    "minio",
    "certifi",   # CA bundle for the explicit urllib3 pools (bounded S3 timeouts)
    # numpy is imported at module scope by leoma.eval.metrics / bootstrap /
    # video_runner, which are on the VALIDATOR path — it is not eval-only.
    "numpy",
    "openai>=1.0.0,<2",
    "google-genai>=0.3.0",
    "click",
    "pydantic>=2.0.0,<3",
    "yt-dlp",
    # Eval server HTTP (validator dispatches duels here)
    "fastapi>=0.109.0,<0.116.0",
    "uvicorn[standard]>=0.27.0",
    "httpx",
    "pillow",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
# GPU eval server only (the box that downloads + runs miner models for duels).
# Validators that just dispatch duels do not need these.
eval = [
    # CUDA 12.4-compatible H100 stack. These are exact because rebuilding an eval
    # image must not silently change generated frames or metric behavior.
    "torch==2.6.0",
    # 0.35.2 is the first production pin used for the Wan2.2 dual-transformer
    # pipeline. Leaving this open-ended lets a rebuild change generation semantics.
    "diffusers==0.35.2",
    "transformers==5.14.1",
    "accelerate==1.10.1",
    "safetensors==0.8.0",
    "lpips==0.1.4",                    # perceptual (spatial) metric
    "opencv-python-headless==4.12.0.88",   # optical-flow (motion) metric
    "open_clip_torch==3.3.0",          # CLIP (semantic) metric
]

[project.scripts]
leoma = "leoma.delivery.commands:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["leoma*"]

# chain.toml is consensus-critical and is read at import — it MUST ship inside the
# wheel, not just exist in the git checkout.
[tool.setuptools.package-data]
leoma = ["chain.toml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"

[tool.leoma.system-dependencies]
# ffprobe is required by video utilities and is provided by ffmpeg.
required_binaries = ["ffprobe", "ffmpeg"]
install_debian = "apt-get update && apt-get install -y ffmpeg"
